--- a/Tutorial/Makefile
+++ b/Tutorial/Makefile
@@ -1,8 +1,20 @@
 CFLAGS := -std=c++17 -O2
 LDFLAGS := -lglfw -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi
 
-a.out: *.cpp *.hpp
-	g++ $(CFLAGS) -o a.out *.cpp $(LDFLAGS)
+# create list of all spv files and set as dependency
+vertSources = $(shell find ./shaders -type f -name "*.vert")
+vertObjFiles = $(patsubst %.vert, %.vert.spv, $(vertSources))
+fragSources = $(shell find ./shaders -type f -name "*.frag")
+fragObjFiles = $(patsubst %.frag, %.frag.spv, $(fragSources))
+
+TARGET = a.out
+$(TARGET): $(vertObjFiles) $(fragObjFiles)
+$(TARGET): *.cpp *.hpp
+	g++ $(CFLAGS) -o $(TARGET) *.cpp $(LDFLAGS)
+
+# make shader targets
+%.spv: %
+	glslc $< -o $@
 
 .PHONY: test clean
 
